--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,17 +30,18 @@ jobs:
     - run: git config --global user.name "Github Action"
     - run: npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
     - run: npm ci
-    - run: npm run build
 
     - name: Publish dev
       if: github.event_name == 'push' || github.event_name == 'pull_request' && github.event.pull_request.merged
       run: |
         node scripts/version-dev
+        npm run build
         cd dist
         npm publish --tag dev
 
     - name: Publish release
       if: github.event_name == 'release'
       run: |
+        npm run build
         cd dist
         npm publish
