--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
 		},
 		"./*": "./*"
 	},
-	"files": [ "*" ],
+	"files": [
+		"*"
+	],
 	"devDependencies": {
 		"@babel/core": "^7.16.0",
 		"@babel/preset-env": "^7.16.4",
@@ -40,7 +42,7 @@
 		"@types/node": "^12.20.37",
 		"rollup": "^2.60.0",
 		"rollup-plugin-terser": "^7.0.2",
-		"typescript": "^4.5.2"
+		"typescript": "^4.5.4"
 	},
 	"optionalDependencies": {
 		"deasync": "^0.1.24"
