--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"private": true,
 	"scripts": {
 		"build": "rm -rf dist && rollup --config && tsc --project src && node scripts/build-package-json && cp LICENSE index.cjs package-lock.json README.md dist",
-		"dev": "rollup --config --watch"
+		"dev": "rollup --config --watch",
+		"lint": "eslint ."
 	},
 	"repository": {
 		"type": "git",
@@ -40,7 +41,17 @@
 		"@rollup/plugin-commonjs": "^21.0.1",
 		"@rollup/plugin-node-resolve": "^13.0.6",
 		"@types/node": "^12.20.37",
+		"@typescript-eslint/eslint-plugin": "^5.8.1",
+		"@typescript-eslint/parser": "^5.8.1",
+		"eslint": "^8.5.0",
+		"eslint-plugin-array-func": "^3.1.7",
+		"eslint-plugin-eslint-comments": "^3.2.0",
+		"eslint-plugin-optimize-regex": "^1.2.1",
+		"eslint-plugin-regexp": "^1.5.1",
+		"eslint-plugin-unicorn": "^40.0.0",
+		"eslint-plugin-write-good-comments": "^0.1.3",
 		"rollup": "^2.60.0",
+		"rollup-plugin-preserve-shebang": "^1.0.1",
 		"rollup-plugin-terser": "^7.0.2",
 		"typescript": "^4.5.4"
 	},
