--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,6 @@
 {
-	"presets": [
-		"@babel/preset-typescript",
-		[ "@babel/preset-env", { "targets": { "node": "12" } } ]
+	"presets": [ // who decided that presets run in reverse order?
+		[ "@babel/preset-env", { "targets": { "node": "12" } } ],
+		[ "@babel/preset-typescript", { "allowDeclareFields": true } ]
 	]
 }
