--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"eslint-plugin-regexp": "^1.5.1",
 		"eslint-plugin-unicorn": "^40.0.0",
 		"eslint-plugin-write-good-comments": "^0.1.3",
+		"latest-version": "^6.0.0",
 		"rollup": "^2.60.0",
 		"rollup-plugin-preserve-shebang": "^1.0.1",
 		"rollup-plugin-terser": "^7.0.2",
