--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,7 +16,6 @@ plugins:
   - "@typescript-eslint"
   - unicorn
   - eslint-comments
-  - write-good-comments
   - array-func
   - regexp
   - optimize-regex
@@ -28,6 +27,11 @@ extends:
   - plugin:eslint-comments/recommended
   - plugin:array-func/recommended
   - plugin:regexp/recommended
+
+ignorePatterns:
+  - node_modules
+  - dist
+  - coverage
 
 rules:
   no-undef: off
@@ -137,18 +141,21 @@ rules:
   unicorn/prefer-number-properties: off
   unicorn/explicit-length-check: off
   unicorn/no-await-expression-member: off
-  unicorn/no-null: off
+  unicorn/no-null: warn
   unicorn/import-index: warn
   unicorn/no-unsafe-regex: warn
   unicorn/no-unused-properties: warn
   # unicorn/prefer-string-replace-all: warn
   # unicorn/prefer-top-level-await: warn
   eslint-comments/no-unused-disable: warn
-  eslint-comments/require-description: warn
-  write-good-comments/write-good-comments: warn
   array-func/prefer-array-from: off
   unicorn/filename-case: off
   unicorn/prefer-code-point: off
+  unicorn/no-new-array: off
+  unicorn/empty-brace-spaces: warn
+  unicorn/no-lonely-if: warn
+  eslint-comments/disable-enable-pair: off
+  "@typescript-eslint/no-unnecessary-condition": off
 
   no-constant-condition:
     - warn
@@ -157,10 +164,6 @@ rules:
   no-empty:
     - warn
     - allowEmptyCatch: true
-
-  "@typescript-eslint/no-unused-vars":
-    - warn
-    - args: none
 
   "@typescript-eslint/quotes":
     - warn
@@ -298,14 +301,6 @@ rules:
       next: multiline-expression
 
     - blankLine: always
-      prev: multiline-let
-      next: "*"
-
-    - blankLine: always
-      prev: "*"
-      next: multiline-let
-
-    - blankLine: always
       prev: multiline-var
       next: "*"
 
@@ -340,6 +335,18 @@ rules:
     - blankLine: any
       prev: export
       next: export
+
+    - blankLine: any
+      prev: type
+      next: type
+
+    - blankLine: always
+      prev: multiline-let
+      next: "*"
+
+    - blankLine: always
+      prev: "*"
+      next: multiline-let
 
   rest-spread-spacing:
     - warn
@@ -382,10 +389,6 @@ rules:
     - allow:
       - arrowFunctions
 
-  "@typescript-eslint/no-unnecessary-condition":
-    - warn
-    - allowConstantLoopConditions: true
-
   "@typescript-eslint/require-array-sort-compare":
     - warn
     - ignoreStringArrays: true
@@ -406,3 +409,5 @@ rules:
   "@typescript-eslint/lines-between-class-members":
     - warn
     - allowSingleLine: true
+
+  no-inner-declarations: off
