--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,10 +9,6 @@ on:
     types:
     - created
 
-  pull_request:
-    types:
-      - closed
-
 jobs:
   publish:
     name: Publish
@@ -35,13 +31,13 @@ jobs:
       if: github.event_name == 'push'
       run: |
         node scripts/version-dev
-        npm run build
+        npm run package
         cd dist
         npm publish --tag dev
 
     - name: Publish release
       if: github.event_name == 'release'
       run: |
-        npm run build
+        npm run package
         cd dist
         npm publish
