--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"target": "ES2019", /* ES2019 is oldest properly supported ES version in Node 12 which is the oldest currently supported Node version */
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"module": "ES2020"
 	},
 	"include": [ "*", "scripts/*", "game-scripts/*", "test/*" ],
 	"exclude": [ "index.cjs" ]
