--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"rollup": "^2.60.0",
 		"rollup-plugin-preserve-shebang": "^1.0.1",
 		"rollup-plugin-terser": "^7.0.2",
+		"semver": "^7.3.7",
 		"typescript": "^4.5.4"
 	},
 	"optionalDependencies": {
