drop support for node 12 the minimum supported version is now 14 upgrade to using `fs/promises` rather than importing `fs` and using its `.promises` property fix new type error caused by upgrading to `@types/node@14`

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,8 +4,7 @@
 		"noUncheckedIndexedAccess": true,
 		"strict": true,
 		"useUnknownInCatchVariables": true,
-		"strictNullChecks": true,
-		"module": "ES2020"
+		"strictNullChecks": true
 	},
 	"extends": "../tsconfig.json",
 	"include": [ "**/*" ]
