--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	},
 	"homepage": "https://github.com/samualtnorman/lib#readme",
 	"engines": {
-		"node": "^12.20 || >=14"
+		"node": ">=14"
 	},
 	"types": "index.d.ts",
 	"type": "module",
@@ -42,7 +42,7 @@
 		"@rollup/plugin-babel": "^5.3.0",
 		"@rollup/plugin-commonjs": "^22.0.0",
 		"@rollup/plugin-node-resolve": "^13.0.6",
-		"@types/node": "^12.20.37",
+		"@types/node": "14",
 		"@typescript-eslint/eslint-plugin": "^5.8.1",
 		"@typescript-eslint/parser": "^5.8.1",
 		"eslint": "^8.5.0",
