--- a/package.json
+++ b/package.json
@@ -36,29 +36,29 @@
 		"*"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.16.0",
-		"@babel/preset-env": "^7.16.4",
-		"@babel/preset-typescript": "^7.16.0",
-		"@rollup/plugin-babel": "^5.3.0",
+		"@babel/core": "^7.17.10",
+		"@babel/preset-env": "^7.17.10",
+		"@babel/preset-typescript": "^7.16.7",
+		"@rollup/plugin-babel": "^5.3.1",
 		"@rollup/plugin-commonjs": "^22.0.0",
-		"@rollup/plugin-node-resolve": "^13.0.6",
-		"@types/node": "14",
-		"@typescript-eslint/eslint-plugin": "^5.8.1",
-		"@typescript-eslint/parser": "^5.8.1",
-		"eslint": "^8.5.0",
+		"@rollup/plugin-node-resolve": "^13.3.0",
+		"@types/node": "^14.18.18",
+		"@typescript-eslint/eslint-plugin": "^5.23.0",
+		"@typescript-eslint/parser": "^5.23.0",
+		"eslint": "^8.15.0",
 		"eslint-plugin-array-func": "^3.1.7",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-optimize-regex": "^1.2.1",
-		"eslint-plugin-regexp": "^1.5.1",
+		"eslint-plugin-regexp": "^1.7.0",
 		"eslint-plugin-unicorn": "^42.0.0",
 		"latest-version": "^6.0.0",
-		"rollup": "^2.60.0",
+		"rollup": "^2.72.1",
 		"rollup-plugin-preserve-shebang": "^1.0.1",
 		"rollup-plugin-terser": "^7.0.2",
 		"semver": "^7.3.7",
-		"typescript": "^4.5.4"
+		"typescript": "^4.6.4"
 	},
 	"optionalDependencies": {
-		"deasync": "^0.1.24"
+		"deasync": "^0.1.26"
 	}
 }
