add `retry()` which takes an async function and tries again a few times if it throws add `fetch()` which either imported `node-fetch`  or just uses native `fetch()` depending tweak linting update dependencies reformat some code a little bit hide some files that shouldn't be edited in vs code simplify `scripts/build-package-json.js` and replace with better `package.json` `"exports"` rules add missing `export`s to `index.ts`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,10 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"target": "ES2020", /* ES2020 is oldest properly supported ES version in Node 14 which is the oldest currently supported Node version */
+		"target": "ES2020", /* oldest properly supported ES version in Node 14 (oldest supported Node version) */
 		"skipLibCheck": true,
 		"module": "ES2022"
 	},
-	"include": [ "*", "scripts/*", "game-scripts/*", "test/*" ],
+	"include": [ "*", "scripts/*" ],
 	"exclude": [ "index.cjs" ]
 }
