--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,7 +18,6 @@ plugins:
   - eslint-comments
   - array-func
   - regexp
-  - optimize-regex
 
 extends:
   - eslint:recommended
@@ -32,6 +31,7 @@ ignorePatterns:
   - node_modules
   - dist
   - coverage
+  - index.cjs
 
 rules:
   no-undef: off
@@ -165,6 +165,10 @@ rules:
     - warn
     - allowEmptyCatch: true
 
+  "@typescript-eslint/no-unused-vars":
+    - warn
+    - args: none
+
   "@typescript-eslint/quotes":
     - warn
     - backtick
@@ -188,6 +192,7 @@ rules:
   func-style:
     - warn
     - declaration
+    - allowArrowFunctions: true
 
   grouped-accessor-pairs:
     - warn
@@ -223,7 +228,9 @@ rules:
 
   generator-star-spacing:
     - warn
-    - after
+    - before: false
+      after: true
+      method: neither
 
   # "@typescript-eslint/indent":
   #   - warn
@@ -251,7 +258,7 @@ rules:
 
   operator-linebreak:
     - warn
-    - before
+    - after
 
   padded-blocks:
     - warn
@@ -264,7 +271,7 @@ rules:
       prev: "*"
       next: "*"
 
-    - blankLine: never
+    - blankLine: any
       prev: import
       next: import
 
@@ -299,6 +306,14 @@ rules:
     - blankLine: always
       prev: "*"
       next: multiline-expression
+
+    - blankLine: always
+      prev: multiline-let
+      next: "*"
+
+    - blankLine: always
+      prev: "*"
+      next: multiline-let
 
     - blankLine: always
       prev: multiline-var
@@ -401,13 +416,9 @@ rules:
     - warn
     - checkFilenames: false
 
-  optimize-regex/optimize-regex:
-    - warn
-    - blacklist:
-      - charClassClassrangesMerge
-
   "@typescript-eslint/lines-between-class-members":
     - warn
     - allowSingleLine: true
 
-  no-inner-declarations: off
+  unicorn/prefer-ternary:
+    - warn
