--- a/package.json
+++ b/package.json
@@ -26,39 +26,44 @@
 	"types": "index.d.ts",
 	"type": "module",
 	"exports": {
+		"./fetch": {
+			"browser": "./fetch/browser.js",
+			"default": "./fetch/index.js"
+		},
 		".": {
 			"import": "./index.js",
 			"require": "./index.cjs"
 		},
-		"./*": "./*"
+		"./*": "./*.js",
+		"./*.js": "./*.js"
 	},
 	"files": [
 		"*"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.17.10",
-		"@babel/preset-env": "^7.17.10",
-		"@babel/preset-typescript": "^7.16.7",
-		"@rollup/plugin-babel": "^5.3.1",
-		"@rollup/plugin-commonjs": "^22.0.0",
-		"@rollup/plugin-node-resolve": "^13.3.0",
-		"@types/node": "^14.18.18",
-		"@typescript-eslint/eslint-plugin": "^5.23.0",
-		"@typescript-eslint/parser": "^5.23.0",
-		"eslint": "^8.15.0",
+		"@babel/core": "^7.19.3",
+		"@babel/preset-env": "^7.19.4",
+		"@babel/preset-typescript": "^7.18.6",
+		"@rollup/plugin-babel": "^6.0.0",
+		"@rollup/plugin-commonjs": "^23.0.0",
+		"@rollup/plugin-node-resolve": "^15.0.0",
+		"@types/node": "^14.18.32",
+		"@typescript-eslint/eslint-plugin": "^5.40.0",
+		"@typescript-eslint/parser": "^5.40.0",
+		"eslint": "^8.25.0",
 		"eslint-plugin-array-func": "^3.1.7",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-optimize-regex": "^1.2.1",
-		"eslint-plugin-regexp": "^1.7.0",
-		"eslint-plugin-unicorn": "^42.0.0",
-		"latest-version": "^6.0.0",
-		"rollup": "^2.72.1",
+		"eslint-plugin-regexp": "^1.9.0",
+		"eslint-plugin-unicorn": "^44.0.2",
+		"latest-version": "^7.0.0",
+		"rollup": "^2.79.1",
 		"rollup-plugin-preserve-shebang": "^1.0.1",
 		"rollup-plugin-terser": "^7.0.2",
-		"semver": "^7.3.7",
-		"typescript": "^4.6.4"
+		"semver": "^7.3.8",
+		"typescript": "^4.8.4"
 	},
 	"optionalDependencies": {
-		"deasync": "^0.1.26"
+		"deasync": "^0.1.28",
+		"node-fetch": "^3.2.10"
 	}
 }
