--- a/src/.eslintrc.yml
+++ b/src/.eslintrc.yml
@@ -5,3 +5,5 @@ rules:
   "@typescript-eslint/no-unnecessary-condition":
     - warn
     - allowConstantLoopConditions: true
+
+  "@typescript-eslint/no-namespace": [ warn, allowDeclarations: true ]
