--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"main": "index.js",
 	"private": true,
 	"scripts": {
+		"lint": "eslint .; tsc; tsc --project src",
 		"build": "rollup --config",
-		"dev": "rollup --config --watch",
-		"lint": "eslint .; tsc",
-		"package": "rm -rf dist && rollup --config && npm run gen-types && node scripts/build-package-json && cp LICENSE README.md index.cjs dist",
-		"gen-types": "tsc --project src --declaration true --emitDeclarationOnly true --noEmit false --outDir dist"
+		"dev": "pnpm build --watch",
+		"emit-declarations": "tsc --project src --declaration --emitDeclarationOnly --noEmit false --outDir dist",
+		"package": "rm -rf dist && pnpm build && pnpm emit-declarations && scripts/build-package-json.js && cp LICENSE README.md index.cjs dist",
+		"update": "pnpm update --latest !@types/node && pnpm update @types/node"
 	},
 	"repository": {
 		"type": "git",
@@ -41,24 +42,25 @@
 		"*"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.20.12",
+		"@babel/core": "^7.21.0",
 		"@babel/preset-env": "^7.20.2",
-		"@babel/preset-typescript": "^7.18.6",
+		"@babel/preset-typescript": "^7.21.0",
+		"@babel/types": "^7.21.2",
+		"@rollup/plugin-alias": "^4.0.3",
 		"@rollup/plugin-babel": "^6.0.3",
-		"@rollup/plugin-commonjs": "^24.0.1",
 		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@rollup/plugin-terser": "^0.4.0",
+		"@samual/lib": "^0.4.0",
 		"@types/node": "^14.18.36",
-		"@typescript-eslint/eslint-plugin": "^5.52.0",
-		"@typescript-eslint/parser": "^5.52.0",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
 		"eslint": "^8.34.0",
 		"eslint-plugin-array-func": "^3.1.8",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-regexp": "^1.12.0",
 		"eslint-plugin-unicorn": "^45.0.2",
-		"latest-version": "^7.0.0",
-		"rollup": "^3.17.1",
-		"rollup-plugin-preserve-shebang": "^1.0.1",
-		"rollup-plugin-terser": "^7.0.2",
+		"magic-string": "^0.30.0",
+		"rollup": "^3.17.2",
 		"semver": "^7.3.8",
 		"typescript": "^4.9.5"
 	},
