--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"private": true,
 	"scripts": {
+		"prepare": "ts-patch install -s",
 		"lint": "eslint .; tsc; tsc --project src",
 		"build": "rollup --config",
 		"dev": "pnpm build --watch",
@@ -62,7 +63,9 @@
 		"magic-string": "^0.30.0",
 		"rollup": "^3.17.2",
 		"semver": "^7.3.8",
-		"typescript": "^4.9.5"
+		"ts-patch": "^2.1.0",
+		"typescript": "^4.9.5",
+		"typescript-transform-paths": "^3.4.6"
 	},
 	"optionalDependencies": {
 		"deasync": "^0.1.28",
