--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,7 +5,8 @@
 		"strict": true,
 		"useUnknownInCatchVariables": true,
 		"strictNullChecks": true,
-		"paths": { "/": [ "." ], "/*": [ "./*" ] }
+		"paths": { "/": [ "." ], "/*": [ "./*" ] },
+		"plugins": [ { "transform": "typescript-transform-paths", "afterDeclarations": true } ]
 	},
 	"extends": "..",
 	"include": [ "**/*" ]
