--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-	"typescript.tsdk": "node_modules/typescript/lib",
-	"files.exclude": {
-		"LICENSE": true,
-		"pnpm-lock.yaml": true,
-		"node_modules": true
-	}
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
