hopefully fix type declarations

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
 	"main": "index.js",
 	"private": true,
 	"scripts": {
-		"prepare": "ts-patch install -s",
 		"lint": "eslint .; tsc; tsc --project src",
 		"build": "rollup --config",
 		"dev": "pnpm build --watch",
-		"emit-declarations": "tsc --project src --declaration --emitDeclarationOnly --noEmit false --outDir dist",
+		"emit-declarations": "scripts/bundle-dts.js",
 		"package": "rm -rf dist && pnpm build && pnpm emit-declarations && scripts/build-package-json.js && cp LICENSE README.md index.cjs dist",
 		"update": "pnpm update --latest !@types/node && pnpm update @types/node"
 	},
@@ -43,29 +42,32 @@
 		"*"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.21.3",
-		"@babel/preset-env": "^7.20.2",
-		"@babel/preset-typescript": "^7.21.0",
-		"@babel/types": "^7.21.3",
-		"@rollup/plugin-alias": "^4.0.3",
+		"@babel/core": "^7.21.4",
+		"@babel/generator": "^7.21.4",
+		"@babel/parser": "^7.21.4",
+		"@babel/plugin-syntax-typescript": "^7.21.4",
+		"@babel/preset-env": "^7.21.4",
+		"@babel/preset-typescript": "^7.21.4",
+		"@babel/types": "^7.21.4",
 		"@rollup/plugin-babel": "^6.0.3",
-		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@rollup/plugin-node-resolve": "^15.0.2",
 		"@rollup/plugin-terser": "^0.4.0",
 		"@samual/lib": "^0.6.0",
+		"@types/babel__generator": "^7.6.4",
 		"@types/node": "^14.18.42",
-		"@typescript-eslint/eslint-plugin": "^5.57.0",
-		"@typescript-eslint/parser": "^5.57.0",
+		"@typescript-eslint/eslint-plugin": "^5.57.1",
+		"@typescript-eslint/parser": "^5.57.1",
+		"dts-bundle-generator": "^8.0.0",
 		"eslint": "^8.37.0",
 		"eslint-plugin-array-func": "^3.1.8",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-regexp": "^1.13.0",
+		"eslint-plugin-regexp": "^1.14.0",
 		"eslint-plugin-unicorn": "^46.0.0",
 		"magic-string": "^0.30.0",
 		"rollup": "^3.20.2",
+		"rollup-plugin-dts": "^5.3.0",
 		"semver": "^7.3.8",
-		"ts-patch": "^2.1.0",
-		"typescript": "^5.0.2",
-		"typescript-transform-paths": "^3.4.6"
+		"typescript": "^5.0.3"
 	},
 	"optionalDependencies": {
 		"deasync": "^0.1.28",
