--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"workbench.colorCustomizations": {
+		"activityBar.background": "#570E3D",
+		"titleBar.activeBackground": "#7A1456",
+		"titleBar.activeForeground": "#FEFCFE"
+	}
 }
