--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,9 +4,7 @@
 		"noUncheckedIndexedAccess": true,
 		"strict": true,
 		"useUnknownInCatchVariables": true,
-		"strictNullChecks": true,
-		"paths": { "/": [ "." ], "/*": [ "./*" ] },
-		"plugins": [ { "transform": "typescript-transform-paths", "afterDeclarations": true } ]
+		"strictNullChecks": true
 	},
 	"extends": "..",
 	"include": [ "**/*" ]
