--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"lint": "eslint .; tsc; tsc --project src",
 		"build": "rollup --config",
 		"dev": "pnpm build --watch",
-		"emit-declarations": "scripts/bundle-dts.js",
+		"emit-declarations": "tsc --project src --declaration --emitDeclarationOnly --noEmit false --outDir dist",
 		"package": "rm -rf dist && pnpm build && pnpm emit-declarations && scripts/build-package-json.js && cp LICENSE README.md index.cjs dist",
 		"update": "pnpm update --latest !@types/node && pnpm update @types/node"
 	},
@@ -43,9 +43,6 @@
 	],
 	"devDependencies": {
 		"@babel/core": "^7.21.4",
-		"@babel/generator": "^7.21.4",
-		"@babel/parser": "^7.21.4",
-		"@babel/plugin-syntax-typescript": "^7.21.4",
 		"@babel/preset-env": "^7.21.4",
 		"@babel/preset-typescript": "^7.21.4",
 		"@babel/types": "^7.21.4",
@@ -53,11 +50,9 @@
 		"@rollup/plugin-node-resolve": "^15.0.2",
 		"@rollup/plugin-terser": "^0.4.0",
 		"@samual/lib": "^0.6.0",
-		"@types/babel__generator": "^7.6.4",
 		"@types/node": "^14.18.42",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
-		"dts-bundle-generator": "^8.0.0",
 		"eslint": "^8.37.0",
 		"eslint-plugin-array-func": "^3.1.8",
 		"eslint-plugin-eslint-comments": "^3.2.0",
@@ -65,7 +60,6 @@
 		"eslint-plugin-unicorn": "^46.0.0",
 		"magic-string": "^0.30.0",
 		"rollup": "^3.20.2",
-		"rollup-plugin-dts": "^5.3.0",
 		"semver": "^7.3.8",
 		"typescript": "^5.0.3"
 	},
