--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -108,6 +108,8 @@ rules:
   unicorn/switch-case-braces: off
   unicorn/no-useless-undefined: off
   unicorn/prefer-top-level-await: off
+  unicorn/no-array-reduce: off
+  unicorn/new-for-builtins: off
   unicorn/no-null: warn
   unicorn/no-unused-properties: warn
   unicorn/empty-brace-spaces: warn
@@ -115,7 +117,6 @@ rules:
   unicorn/better-regex: [ warn, sortCharacterClasses: false ]
   unicorn/prevent-abbreviations: [ warn, { checkFilenames: false, allowList: { args: true, Args: true, db: true } } ]
   unicorn/prefer-ternary: warn
-  unicorn/no-array-reduce: off
 
   eslint-comments/disable-enable-pair: off
   eslint-comments/no-unused-disable: warn
