--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
 		"url": "git+https://github.com/samualtnorman/lib.git"
 	},
 	"author": "Samual Norman",
-	"license": "GPL-3.0-or-later",
+	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/samualtnorman/lib/issues"
 	},
 	"homepage": "https://github.com/samualtnorman/lib#readme",
 	"engines": {
-		"node": ">=14"
+		"node": ">=16"
 	},
 	"types": "index.d.ts",
 	"type": "module",
