because `index.ts` no longer exports anything, there's no point in having `deasync` anymore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,5 @@
 		"skipLibCheck": true,
 		"module": "ESNext"
 	},
-	"include": [ "*", "scripts/*" ],
-	"exclude": [ "index.cjs" ]
+	"include": [ "*", "scripts/*" ]
 }
