--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,7 +3,7 @@ overrides: [ files: [ "**/*.js", "**/*.ts" ] ]
 parser: "@typescript-eslint/parser"
 parserOptions: { project: [ ./tsconfig.json, ./src/tsconfig.json] }
 plugins: [ "@typescript-eslint", unicorn, eslint-comments, array-func, regexp ]
-ignorePatterns: [ node_modules, dist, index.cjs ]
+ignorePatterns: [ node_modules, dist ]
 
 extends:
 - eslint:recommended
