--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "rollup --config",
 		"dev": "pnpm build --watch",
 		"emit-declarations": "tsc --project src --declaration --emitDeclarationOnly --noEmit false --outDir dist",
-		"package": "rm -rf dist && pnpm build && pnpm emit-declarations && scripts/build-package-json.js && cp LICENSE README.md index.cjs dist",
+		"package": "rm -rf dist && pnpm build && pnpm emit-declarations && scripts/build-package-json.js && cp LICENSE README.md dist",
 		"update": "pnpm update --latest !@types/node && pnpm update @types/node"
 	},
 	"repository": {
@@ -30,10 +30,6 @@
 		"./fetch": {
 			"browser": "./fetch/browser.js",
 			"default": "./fetch/index.js"
-		},
-		".": {
-			"import": "./index.js",
-			"require": "./index.cjs"
 		},
 		"./*": "./*.js",
 		"./*.js": "./*.js"
@@ -64,7 +60,6 @@
 		"typescript": "^5.1.3"
 	},
 	"optionalDependencies": {
-		"deasync": "^0.1.28",
 		"node-fetch": "^3.3.1"
 	}
 }
