--- a/package.json
+++ b/package.json
@@ -38,10 +38,8 @@
 		"*"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.22.5",
 		"@babel/preset-env": "^7.22.5",
 		"@babel/preset-typescript": "^7.22.5",
-		"@babel/types": "^7.22.5",
 		"@rollup/plugin-babel": "^6.0.3",
 		"@rollup/plugin-node-resolve": "^15.1.0",
 		"@rollup/plugin-terser": "^0.4.3",
@@ -49,6 +47,7 @@
 		"@types/node": "^16.18.36",
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@typescript-eslint/parser": "^5.59.11",
+		"babel-plugin-here": "^0.0.1",
 		"eslint": "^8.42.0",
 		"eslint-plugin-array-func": "^3.1.8",
 		"eslint-plugin-eslint-comments": "^3.2.0",
