--- a/package.json
+++ b/package.json
@@ -43,16 +43,11 @@
 		"@rollup/plugin-babel": "^6.0.3",
 		"@rollup/plugin-node-resolve": "^15.1.0",
 		"@rollup/plugin-terser": "^0.4.3",
+		"@samual/eslint-config": "^0.0.1",
 		"@samual/lib": "^0.7.0",
 		"@types/node": "^16.18.36",
-		"@typescript-eslint/eslint-plugin": "^5.59.11",
-		"@typescript-eslint/parser": "^5.59.11",
 		"babel-plugin-here": "^0.0.1",
 		"eslint": "^8.42.0",
-		"eslint-plugin-array-func": "^3.1.8",
-		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-regexp": "^1.15.0",
-		"eslint-plugin-unicorn": "^47.0.0",
 		"magic-string": "^0.30.0",
 		"rollup": "^3.25.1",
 		"semver": "^7.5.1",
