--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2.4.2
-    - { name: Setup Node.js environment, uses: actions/setup-node@v3.1.1, with: { node-version: ">=18" } }
-    - { name: Setup PNPM, uses: pnpm/action-setup@v2.2.1, with: { version: 8.0.0, run_install: true } }
+    - { name: Checkout, uses: actions/checkout@v4 }
+    - { name: Setup Node.js environment, uses: actions/setup-node@v3, with: { node-version: "^18.18.2" } }
+    - { name: Setup pnpm, uses: pnpm/action-setup@v2, with: { version: "^8.9.2", run_install: true } }
     - run: pnpm lint
