--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"module": "ESNext",
 		"moduleResolution": "Node",
 		"resolveJsonModule": true,
-		"types": [ "@types/node", "@total-typescript/ts-reset", "babel-plugin-here/env" ],
+		"types": [ "@types/node", "@total-typescript/ts-reset" ],
 		"noEmit": true,
 		"checkJs": true,
 		"esModuleInterop": true,
