--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -8,7 +8,7 @@ jobs:
     strategy: { fail-fast: false, matrix: { language: [ javascript ] } }
 
     steps:
-    - { name: Checkout repository, uses: actions/checkout@v2 }
-    - { name: Initialize CodeQL, uses: github/codeql-action/init@v1, with: { languages: "${{ matrix.language }}" } }
-    - { name: Autobuild, uses: github/codeql-action/autobuild@v1 }
-    - { name: Perform CodeQL Analysis, uses: github/codeql-action/analyze@v1 }
+    - { name: Checkout, uses: actions/checkout@v4 }
+    - { name: Initialize CodeQL, uses: github/codeql-action/init@v3, with: { languages: "${{ matrix.language }}" } }
+    - { name: Autobuild, uses: github/codeql-action/autobuild@v3 }
+    - { name: Perform CodeQL Analysis, uses: github/codeql-action/analyze@v3 }
