--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
     - { name: Checkout, uses: actions/checkout@v4 }
-    - { name: Setup Node.js environment, uses: actions/setup-node@v4, with: { node-version: "^20.11.1" } }
+    - { name: Setup Node.js environment, uses: actions/setup-node@v4, with: { node-version: "^18 || >=20" } }
     - { name: Setup pnpm, uses: pnpm/action-setup@v3, with: { version: "^9.0.2", run_install: true } }
     - run: git config --global user.email github-action@users.noreply.github.com
     - run: git config --global user.name "Github Action"
