--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"@samual/lib": "^0.9.1",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"@types/babel__preset-env": "^7.9.6",
-		"@types/node": "^18.19.26",
+		"@types/node": "~18.0.6",
 		"@types/semver": "^7.5.8",
 		"babel-plugin-here": "^1.0.0",
 		"eslint": "^8.57.0",
