--- a/package.json
+++ b/package.json
@@ -29,21 +29,14 @@
 		"./*.js": "./*.js"
 	},
 	"devDependencies": {
-		"@babel/preset-env": "^7.24.3",
-		"@babel/preset-typescript": "^7.24.1",
-		"@rollup/plugin-babel": "^6.0.4",
-		"@rollup/plugin-node-resolve": "^15.2.3",
-		"@rollup/plugin-terser": "^0.4.4",
 		"@samual/eslint-config": "^0.0.3",
-		"@samual/lib": "^0.9.1",
+		"@samual/rollup-config": "^0.0.2",
 		"@total-typescript/ts-reset": "^0.5.1",
-		"@types/babel__preset-env": "^7.9.6",
 		"@types/node": "~18.0.6",
 		"@types/semver": "^7.5.8",
 		"babel-plugin-here": "^1.0.0",
 		"eslint": "^8.57.0",
 		"rollup": "^4.13.2",
-		"rollup-plugin-prettier": "^4.1.1",
 		"semver": "^7.6.0",
 		"typescript": "^5.4.3"
 	}
