drop support for node versions below 18.20 and 20.10 but gain support for building with 22

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	},
 	"homepage": "https://github.com/samualtnorman/lib#readme",
 	"engines": {
-		"node": "^18 || >=20",
+		"node": "^18.20 || ^20.10 || >=22",
 		"pnpm": "^9.0.2"
 	},
 	"type": "module",
