--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - { name: Checkout, uses: actions/checkout@v4 }
     - { name: Setup Node.js environment, uses: actions/setup-node@v4, with: { node-version: ^18.20 || ^20.10 || >=22 } }
-    - { name: Setup pnpm, uses: pnpm/action-setup@v4, with: { version: ^9, run_install: true } }
+    - { name: Setup pnpm, uses: pnpm/action-setup@v4, with: { run_install: true } }
     - run: git config --global user.email github-action@users.noreply.github.com
     - run: git config --global user.name "Github Action"
     - run: pnpm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
