--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
       uses: actions/setup-node@v4
       with: { node-version: "${{ matrix.node-version }}" }
 
-    - { name: Setup pnpm, uses: pnpm/action-setup@v4, with: { version: ^9, run_install: true } }
+    - { name: Setup pnpm, uses: pnpm/action-setup@v4, with: { run_install: true } }
     - run: pnpm package
     - run: pnpm lint
