--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"homepage": "https://github.com/samualtnorman/lib#readme",
 	"engines": {
 		"node": "^18.20 || ^20.10 || >=22",
-		"pnpm": "^9"
+		"pnpm": "^10"
 	},
 	"type": "module",
 	"exports": {
@@ -29,13 +29,14 @@
 		"./*.js": "./*.js"
 	},
 	"devDependencies": {
-		"@samual/rollup-config": "^0.1.1",
+		"@samual/rollup-config": "^0.1.2",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "~18.19.60",
+		"@types/node": "~18.19.74",
 		"@types/semver": "^7.5.8",
-		"babel-plugin-here": "^1.0.1",
-		"rollup": "^4.24.2",
-		"semver": "^7.6.3",
-		"typescript": "^5.6.3"
-	}
+		"babel-plugin-here": "^1.0.2",
+		"rollup": "^4.32.1",
+		"semver": "^7.7.0",
+		"typescript": "^5.7.3"
+	},
+	"packageManager": "pnpm@10.1.0"
 }
