--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,7 +4,9 @@
 		"exactOptionalPropertyTypes": true,
 		"declaration": true,
 		"outDir": "../dist",
-		"types": [ "@types/node", "@total-typescript/ts-reset", "babel-plugin-here/env" ]
+		"types": [ "@types/node", "@total-typescript/ts-reset", "babel-plugin-here/env" ],
+		"checkJs": false,
+		"isolatedDeclarations": true
 	},
 	"include": [ "**/*" ]
 }
