switch from using `"packageManager"` in `package.json` to manage pick specific pnpm version to a `shell.nix` file also using `shell.nix` to pick specific Node.js version this is done using new `.envrc` file which is also adding `node_modules/.bin` to `$PATH` the `shell.nix` also includes essentials like certs and git

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"files.insertFinalNewline": true,
 	"files.trimFinalNewlines": true,
-	"files.trimTrailingWhitespace": true
+	"files.trimTrailingWhitespace": true,
+	"files.exclude": {
+		".direnv": true
+	}
 }
