--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,19 +4,32 @@ on: { push: { branches: [ main ] }, release: { types: [ created ] } }
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions: { contents: read, id-token: write }
 
     steps:
     - { name: Checkout, uses: actions/checkout@v4 }
-    - { name: Setup Node.js environment, uses: actions/setup-node@v4, with: { node-version: ^18.20 || ^20.10 || >=22 } }
-    - { name: Setup pnpm, uses: pnpm/action-setup@v4, with: { run_install: true } }
+    - { name: Setup pnpm, uses: pnpm/action-setup@v4, with: { version: ^10, run_install: true } }
+
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v4
+      with: { node-version: ^18.20 || ^20.10 || >=22, registry-url: 'https://registry.npmjs.org', cache: pnpm }
+
     - run: git config --global user.email github-action@users.noreply.github.com
     - run: git config --global user.name "Github Action"
-    - run: pnpm config set //registry.npmjs.org/:_authToken=${{secrets.NPM_TOKEN}}
+
+    - if: github.event_name == 'push'
+      run: scripts/version-dev.js
+
+    - run: scripts/npm.sh
 
     - name: Publish dev
       if: github.event_name == 'push'
-      run: scripts/version-dev.js && scripts/npm.sh && cd dist && pnpm publish --tag dev
+      run: pnpm publish --provenance --access public --no-git-checks --tag dev
+      working-directory: dist
+      env: { NODE_AUTH_TOKEN: "${{secrets.NPM_TOKEN}}" }
 
     - name: Publish release
       if: github.event_name == 'release'
-      run: scripts/npm.sh && cd dist && pnpm publish --no-git-checks
+      run: pnpm publish --provenance --access public --no-git-checks
+      working-directory: dist
+      env: { NODE_AUTH_TOKEN: "${{secrets.NPM_TOKEN}}" }
