--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on: { push: , pull_request: }
 
 jobs:
   test:
-    strategy: { matrix: { node-version: [ ^18.20, ^20.10, ">=22" ] } }
+    strategy: { matrix: { node-version: [ ^18.20, ^20.10, ^22, ">=23" ] } }
     runs-on: ubuntu-latest
 
     steps:
